force-app/main/default/objects/Connect__c/Connect__c.object-meta.xml
<CustomObject>
    <label>Connect</label>
    <nameField>
        <displayFormat>CON-{000000}</displayFormat>
        <label>Connect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>