force-app/main/default/objects/Connect__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <label>Offer</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>