force-app/main/default/objects/Connect__c/fields/Responder__c.field-meta.xml
<CustomField>
    <fullName>Responder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Connections1</relationshipName>
    <type>Lookup</type>
</CustomField>